--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,78 @@
+* {
+	box-sizing: border-box;
+	margin: 0;
+	padding: 0;
+}
+input {
+	border: none;
+	background-color: rgba(238, 238, 238, 0.4);
+	border-radius: 1em;
+	box-shadow: 0 0 5px 0 rgba(0, 0, 0, 0.1);
+	outline: none;
+	padding: 1rem 2rem;
+	font-size: 20px;
+}
+button {
+	border: none;
+	outline: none;
+	border-radius: 10px;
+	padding: 1rem 2rem;
+	font-size: 20px;
+	cursor: pointer;
+}
+.image-hover-background {
+	position: absolute;
+	top: 0;
+	left: 0;
+	width: 100%;
+	height: 100%;
+	background-color: rgba(0, 0, 0, 0);
+	z-index: 1;
+	transition: background-color 0.5s ease;
+}
+.image {
+	transition: transform 1s ease;
+}
+.image-container:hover > .image-hover-background {
+	background-color: rgba(0, 0, 0, 0.5);
+}
+.image-container:hover > .image {
+	transform: scale(1.2);
+}
+.image-container:hover > .user-info {
+	bottom: 20px;
+	opacity: 1;
+}
+.image-container:hover .user-name {
+	opacity: 1;
+}
+
 .App {
-  text-align: center;
+	text-align: center;
+	padding: 1rem 10rem;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+.user-info {
+	position: absolute;
+	bottom: -50%;
+	left: 40px;
+	z-index: 2;
+	opacity: 0;
+	display: flex;
+	align-items: center;
+	height: 80px;
+	gap: 0 15px;
+	transition: 1s ease;
+}
+.user-avatar {
+	width: 70px;
+	height: 70px;
+	border-radius: 50%;
+	border: 2px solid #fff;
+	object-fit: cover;
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
-}
-
-.App-link {
-  color: #61dafb;
-}
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.user-name {
+	opacity: 0;
+	transition: 0.7s ease 1s;
 }
